# build

./: .gitmodules
config/: busybox_defconfig  grub.cfg  load.cfg  modules_builtin.lst
core/: main.mk
core/tasks/: busybox.mk  e2fsprogs.mk  grub.mk  lk.mk  multiboot.mk  screenstream.mk  selinux.mk  syscallserver.mk
core/tasks/selinux/: CMakeLists.txt
devices/: aries.mk
devices/aries/: device.mk  fstab  grub.cfg  modules_builtin.lst
devices/armani/: device.mk  fstab  grub.cfg
devices/condor/: device.mk
host/: fastboot.mk  mkbootimg.mk  screenstream.mk
tools/: font_inch_to_px  format_code  logo_gen.py  setlocalversion  take_screenshot
